# edge-impulse-ffi-rs

./: .cargo-clean  .gitignore  Cargo.toml  Dockerfile  README.md  build-aarch64.sh  build.rs  build_helpers.rs  clean-model.sh  docker-compose.yml  docker-shell.sh  run-aarch64-example.sh  run-example-aarch64.sh  test-aarch64-example.sh
examples/: ffi_audio_infer.rs  ffi_image_infer.rs  image_infer.rs
ffi_glue/: .gitignore  CMakeLists.txt  README.md  edge_impulse_c_api.cpp  edge_impulse_wrapper.h  tflite_detection_postprocess_wrapper.cc
model/: README.md
src/: bindings.rs  bindings_dummy.rs  lib.rs  model_metadata.rs  model_metadata_dummy.rs  runner_api.rs
