[package]
name = "edge-impulse-ffi-rs"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings for Edge Impulse C++ SDK"
license = "BSD-3-Clause-Clear"
authors = ["Fernando Jiménez Moreno <fernando@edgeimpulse.com>"]
repository = "https://github.com/edgeimpulse/edge-impulse-ffi-rs"
keywords = ["edge-impulse", "machine-learning", "inference", "ffi"]
categories = ["api-bindings", "science"]

[lib]
name = "edge_impulse_ffi_rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"


