[package]
name = "edge-impulse-ffi-rs"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings for Edge Impulse C++ SDK"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/edgeimpulse/edge-impulse-ffi-rs"
keywords = ["edge-impulse", "machine-learning", "inference", "ffi"]
categories = ["api-bindings", "science"]
build = "build.rs"

[package.metadata.edge-impulse]
# Project ID from Edge Impulse Studio
# project-id = "12345"
# API key from Edge Impulse Studio (Settings -> API Keys)
# api-key = "your-api-key-here"

[lib]
name = "edge_impulse_ffi_rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
ureq = { version = "2.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.5"


